--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
             grid-template-columns: 250px 1fr;
             grid-template-rows: auto auto 1fr auto;
             min-height: 100vh;
+            position: relative;
+            overflow-x: hidden;
         }
 
         header {
@@ -159,6 +161,37 @@
             opacity: 0.9;
         }
 
+        /* Анимация бегущего человечка */
+        .running-man {
+            position: fixed;
+            bottom: 20px;
+            left: -100px;
+            font-size: 40px;
+            animation: run 10s linear infinite;
+            z-index: 1000;
+            transform: translateY(0);
+        }
+
+        @keyframes run {
+            0% {
+                left: -100px;
+                transform: translateY(0);
+            }
+            25% {
+                transform: translateY(-20px);
+            }
+            50% {
+                transform: translateY(0);
+            }
+            75% {
+                transform: translateY(-10px);
+            }
+            100% {
+                left: calc(100% + 100px);
+                transform: translateY(0);
+            }
+        }
+
         @media (max-width: 768px) {
             body {
                 grid-template-areas:
@@ -174,10 +207,17 @@
                 box-shadow: none;
                 border-top: 1px solid var(--text-color);
             }
+
+            .running-man {
+                font-size: 30px;
+                bottom: 10px;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="running-man">🏃‍♂️</div>
+
     <header>
         <h1>Мой Красивый Сайт</h1>
         <p>С переключением светлой и тёмной темы</p>
@@ -274,3 +314,4 @@
     </script>
 </body>
 </html>
+
